<?xml version="1.0" encoding="UTF-8"?>
<project 
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="
		http://maven.apache.org/POM/4.0.0 
		http://maven.apache.org/maven-v4_0_0.xsd">
		
	<name>Summer AppEngine Sample</name>
	<artifactId>summer-appengine-sample</artifactId>
	<packaging>war</packaging>
	<modelVersion>4.0.0</modelVersion>
	
	<parent>
		<groupId>com.asual.summer</groupId>
		<artifactId>summer-samples</artifactId>
		<version>1.0.0.M3-SNAPSHOT</version>
	</parent>

	<properties>
		<gae.version>1.4.3</gae.version>
	</properties>

	<repositories>
		<repository>
			<id>org.datanucleus.maven2</id>
			<url>http://www.datanucleus.org/downloads/maven2</url>
		</repository>
		<repository>
			<id>gae-plugin</id>
			<url>http://maven-gae-plugin.googlecode.com/svn/repository</url>
		</repository>
	</repositories>
	
	<pluginRepositories>
		<pluginRepository>
			<id>org.datanucleus.maven2</id>
			<url>http://www.datanucleus.org/downloads/maven2</url>
		</pluginRepository>
		<pluginRepository>
			<id>com.googlecode.maven-gae-plugin</id>
			<url>http://maven-gae-plugin.googlecode.com/svn/repository</url>
		</pluginRepository>
	</pluginRepositories>
	
	<dependencies>
		<dependency>
			<groupId>com.asual.summer</groupId>
			<artifactId>summer-ajax</artifactId>
			<version>1.0.0.M3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.asual.summer</groupId>
			<artifactId>summer-atmosphere</artifactId>
			<version>1.0.0.M3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.asual.summer</groupId>
			<artifactId>summer-beauty</artifactId>
			<version>1.0.0.M3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.asual.summer</groupId>
			<artifactId>summer-core</artifactId>
			<version>1.0.0.M3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.asual.summer</groupId>
			<artifactId>summer-json</artifactId>
			<version>1.0.0.M3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.asual.summer</groupId>
			<artifactId>summer-lesspack</artifactId>
			<version>1.0.0.M3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.asual.summer</groupId>
			<artifactId>summer-outprint</artifactId>
			<version>1.0.0.M3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>com.asual.summer</groupId>
			<artifactId>summer-xml</artifactId>
			<version>1.0.0.M3-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>javax.servlet.jsp.jstl</groupId>
			<artifactId>jstl-api</artifactId>
			<version>1.2</version>
			<exclusions>
				<exclusion>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.glassfish.web</groupId>
			<artifactId>jstl-impl</artifactId>
			<version>1.2</version>
			<exclusions>
				<exclusion>
					<groupId>javax.servlet</groupId>
					<artifactId>servlet-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>1.6.9</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-aspects</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>net.sf.jsr107cache</groupId>
			<artifactId>jsr107cache</artifactId>
			<version>1.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-api-1.0-sdk</artifactId>
			<version>${gae.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-api-labs</artifactId>
			<version>${gae.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-api-stubs</artifactId>
			<version>${gae.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.appengine</groupId>
			<artifactId>appengine-testing</artifactId>
			<version>${gae.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.appengine.orm</groupId>
			<artifactId>datanucleus-appengine</artifactId>
			<version>1.0.7</version>
		</dependency>
		<dependency>
			<groupId>org.datanucleus</groupId>
			<artifactId>datanucleus-jpa</artifactId>
			<version>1.1.5</version>
		</dependency>
		<dependency>
			<groupId>org.datanucleus</groupId>
			<artifactId>datanucleus-core</artifactId>
			<version>1.1.6</version>
			<exclusions>
				<exclusion>
					<artifactId>transaction-api</artifactId>
					<groupId>javax.transaction</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.datanucleus</groupId>
			<artifactId>datanucleus-enhancer</artifactId>
			<version>1.1.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.geronimo.specs</groupId>
			<artifactId>geronimo-jpa_3.0_spec</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.geronimo.specs</groupId>
			<artifactId>geronimo-jta_1.1_spec</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>javax.jdo</groupId>
			<artifactId>jdo2-api</artifactId>
			<version>2.3-ec</version>
			<exclusions>
				<exclusion>
					<artifactId>transaction-api</artifactId>
					<groupId>javax.transaction</groupId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>aspectj-maven-plugin</artifactId>
				<version>1.0</version>
				<dependencies>
					<dependency>
						<groupId>org.aspectj</groupId>
						<artifactId>aspectjrt</artifactId>
						<version>1.6.9</version>
					</dependency>
					<dependency>
						<groupId>org.aspectj</groupId>
						<artifactId>aspectjtools</artifactId>
						<version>1.6.9</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>test-compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<outxml>true</outxml>
					<aspectLibraries>
						<aspectLibrary>
							<groupId>org.springframework</groupId>
							<artifactId>spring-aspects</artifactId>
						</aspectLibrary>
					</aspectLibraries>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.datanucleus</groupId>
				<artifactId>maven-datanucleus-plugin</artifactId>
				<version>1.1.4</version>
				<configuration>
					<api>JPA</api>
					<enhancerName>ASM</enhancerName>
					<log4jConfiguration>${basedir}/src/main/resources/META-INF/log4j.xml</log4jConfiguration>
					<mappingIncludes>**/domain/*.class</mappingIncludes>
					<persistenceUnitName>transactions-optional</persistenceUnitName>
				</configuration>
				<executions>
					<execution>
						<phase>process-classes</phase>
						<goals>
							<goal>enhance</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.asual.summer</groupId>
				<artifactId>summer-bundle</artifactId>
				<version>1.0.0.M3-SNAPSHOT</version>
				<executions>
					<execution>
						<goals>
							<goal>descriptor</goal>
							<goal>resources</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>net.kindleit</groupId>
				<artifactId>maven-gae-plugin</artifactId>
				<version>0.8.4</version>
				<configuration>
					<jvmFlags>
						<jvmFlag>-Xdebug</jvmFlag>
						<jvmFlag>-Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=n</jvmFlag>
						<jvmFlag>-XX:PermSize=512m</jvmFlag>
						<jvmFlag>-XX:MaxHeapSize=1024m</jvmFlag>
					</jvmFlags>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
</project>